fix(amount): révision sur la liste des charges et resources affichés

--- a/templates/pages/account/list.html.twig
+++ b/templates/pages/account/list.html.twig
@@ -78,12 +78,14 @@
                                     </li>
                                 {% endif %}
 
+                                {% if is_granted('delete', account) %}
                                 <li>
                                     <a href="{{ path('bank_account_share', { account: account.id }) }}" class="dropdown-item">
                                         <i class="fas fa-trash"></i>
                                         {% trans %}Delete Account{% endtrans %}
                                     </a>
                                 </li>
+                                {% endif %}
                             </ul>
                         </div>
                     </td>
