--- a/templates/pages/bank/charge/list.html.twig
+++ b/templates/pages/bank/charge/list.html.twig
@@ -6,15 +6,23 @@
 
     <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                {% trans %}Search{% endtrans %}:
-            </a>
-            <div class="collapse navbar-collapse" id="searchbar">
-                <form class="d-flex">
+            <div class="d-flex">
+                <a class="navbar-brand d-inline" href="#">
+                    {% trans %}Search{% endtrans %}:
+                </a>
+                <form class="d-flex mb-2 mb-lg-0">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="btn btn-outline-primary" aria-current="page" href="{{ path('bank_charge_add') }}">
+                        <i class="fas fa-plus"></i>
+                        Ajouter
+                    </a>
+                </li>
+            </ul>
         </div>
     </nav>
 
@@ -32,7 +40,12 @@
             {% for charge in charges %}
                 <tr>
                     <td>{{ charge.name }}</td>
-                    <td>{{ charge.account.name }}</td>
+                    <td>
+                        <div>{{ charge.account.name }}</div>
+                        {% if charge.account.owner is not null and charge.account.owner is not same as app.user %}
+                            <div class="text-muted">({{ charge.account.owner.fullname }})</div>
+                        {% endif %}
+                    </td>
                     <td class="text-end">{{ charge.amount | format_currency('EUR') }}</td>
                     <td class="text-end">
 
@@ -43,7 +56,7 @@
                             <ul class="dropdown-menu">
                                 {% if is_granted('edit', charge) %}
                                     <li>
-                                        <a href="{{ path('bank_charge_update', { account: charge.account.id, charge: charge.id }) }}" class="dropdown-item">
+                                        <a href="{{ path('bank_charge_update', { charge: charge.id }) }}" class="dropdown-item">
                                             <i class="fas fa-pencil-alt"></i>
                                             {% trans %}Edit Charge{% endtrans %}
                                         </a>
@@ -52,7 +65,7 @@
 
                                 {% if is_granted('delete', charge) %}
                                 <li>
-                                    <a href="#" class="dropdown-item">
+                                    <a href="{{ path('bank_charge_delete', { charge: charge.id }) }}" class="dropdown-item">
                                         <i class="fas fa-trash"></i>
                                         {% trans %}Delete Charge{% endtrans %}
                                     </a>
