--- a/templates/pages/bank/account/list.html.twig
+++ b/templates/pages/bank/account/list.html.twig
@@ -6,15 +6,23 @@
 
     <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                {% trans %}Search{% endtrans %}:
-            </a>
-            <div class="collapse navbar-collapse" id="searchbar">
-                <form class="d-flex">
+            <div class="d-flex">
+                <a class="navbar-brand d-inline" href="#">
+                    {% trans %}Search{% endtrans %}:
+                </a>
+                <form class="d-flex mb-2 mb-lg-0">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="btn btn-outline-primary" aria-current="page" href="{{ path('bank_account_add') }}">
+                        <i class="fas fa-plus"></i>
+                        Ajouter
+                    </a>
+                </li>
+            </ul>
         </div>
     </nav>
 
