feat(modal): amélioration du js

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,12 +19,12 @@
         <div id="modal-form" class="modal fade" tabindex="-1" data-controller="modal" data-target="app.modal">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title"></h5>
+                    <div class="modal-header" data-target="modal.header">
+                        <h5 class="modal-title" data-target="modal.title"></h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body"></div>
-                    <div class="modal-footer"></div>
+                    <div class="modal-body" data-target="modal.body"></div>
+                    <div class="modal-footer" data-target="modal.footer"></div>
                 </div>
             </div>
         </div>
