--- a/templates/pages/bank/account/list.html.twig
+++ b/templates/pages/bank/account/list.html.twig
@@ -30,9 +30,9 @@
                     <td class="align-middle">{{ account.name }}</td>
                     <td class="align-middle">{{ account.owner ? account.owner.fullname : '' }}</td>
                     <td class="align-middle">{{ account.createdBy.fullname }}</td>
-                    <td class="align-middle text-end">{{ account.totalResources | format_currency('EUR') }}</td>
-                    <td class="align-middle text-end">{{ account.totalCharges | format_currency('EUR') }}</td>
-                    <td class="align-middle text-end">{{ account.total | format_currency('EUR') }}</td>
+                    <td class="align-middle text-end">{{ account.totalResources(date) | format_currency('EUR') }}</td>
+                    <td class="align-middle text-end">{{ account.totalCharges(date) | format_currency('EUR') }}</td>
+                    <td class="align-middle text-end">{{ account.total(date) | format_currency('EUR') }}</td>
                     <td class="align-middle text-end">
 
                         <div class="btn-group">
