--- a/templates/pages/dashboard/index.html.twig
+++ b/templates/pages/dashboard/index.html.twig
@@ -10,7 +10,8 @@
                     <div class="col-12 col-sm-6 col-lg-4">
                         <div class="mb-3">
                             {{ sonata_block_render({ type: 'app.block.card.account' }, {
-                                account: account
+                                account: account,
+                                date: date
                             }) }}
                         </div>
                     </div>
